[package]
name = "pdc"
version = "0.3.0"
description = "Pulpcore Dependency Checker"
repository = "https://github.com/fao89/pdc"
authors = ["Fabricio Aguiar <fabricio.aguiar@gmail.com>"]
readme = "README.md"
license = "GPL-2.0+"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.12"
reqwest = { version = "0.11.0", features = ["json"] }
semver = "0.11.0"
serde_json = "1.0.62"
spinners = "1.2.0"
tokio = { version = "1.2.0", features = ["macros", "rt-multi-thread"] }
