[package]
name = "pdc"
version = "0.3.1"
description = "Pulpcore Dependency Checker"
repository = "https://github.com/fao89/pdc"
authors = ["Fabricio Aguiar <fabricio.aguiar@gmail.com>"]
readme = "README.md"
license = "GPL-2.0+"
edition = "2018"
keywords = ["pulp", "pulpcore", "plugins", "dependency", "dependencies"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
semver = "0.11"
serde_json = "1.0"
spinners = "1.2"
tokio = { version = "1.8", features = ["macros", "rt-multi-thread"] }
